--- a/app/globals.css
+++ b/app/globals.css
@@ -2,8 +2,23 @@
 @tailwind components;
 @tailwind utilities;
 
+
+html,
+body,
+#root {
+  height: 100%;
+  width: 100%;
+}
+
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: system-ui, Arial, Helvetica, sans-serif;
+  margin: 0;
+}
+
+*,
+*:after,
+*:before {
+  box-sizing: border-box;
 }
 
 @layer base {
